<resources>
    <string name="app_name">Feedback</string>
    <string name="textView">Create Account</string>
    <string name="textView1">Name</string>
    <string name="editTextTextPersonName1">Enter Your Name</string>
    <string name="textView2">Email</string>
    <string name="editTextTextPersonName2">Enter Your Email</string>
    <string name="textView3">Password</string>
    <string name="editTextTextPersonName3">Enter Your Password</string>
    <string name="textView4">Re Enter Password</string>
    <string name="editTextTextPassword4">Repeat Your Password</string>
    <string name="btnSignup">Signup</string>
    <string name="textView5">Hi,\nPlease Login</string>
    <string name="textView6">Don\'t Remember Password? Recovery It</string>
    <string name="textView7">Or Login With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="btnLogin">Login</string>
    <string name="textView8">+94770841275</string>
    <string name="textView9">No.81/5,Welivita Road,Malabe</string>
    <string name="textView10">Send Your Feedback</string>
    <string name="textView11">Feedback</string>
    <string name="textView12">Email</string>
    <string name="editTextTextPersonName5">Enter Your Email</string>
    <string name="btnSubmit">Submit</string>
</resources>