<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenplant" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="150dp"
        android:text="@string/textView"
        android:textColor="@color/DarkSlateGray_10"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="400dp"
        android:layout_marginTop="12dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:id="@+id/layout_const"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/layout_margintop"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/editTextTextPersonName1"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text"
                android:text="@string/textView2"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/layout_margintop"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/editTextTextPersonName2"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text"
                android:text="@string/textView3"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/layout_margintop"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/editTextTextPersonName3"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp"
                app:passwordToggleEnabled="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text2"
                android:text="@string/textView4"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/layout_margintop"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/editTextTextPassword4"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already Registered , Sign In !"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/btnSignup"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
