<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenplant" />


    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="516dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textView12"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/editTextTextPersonName5"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textView3"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/editTextTextPersonName3"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Not Registered ,Sign In!"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/textView7" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/facebook"
                    android:textColor="@color/DarkSlateGray_10"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:textColor="@color/DarkSlateGray_10"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_background"
            android:text="@string/btnLogin"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>