<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"

    tools:context=".activities.InsertionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="139dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="201dp"
        android:layout_height="85dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greenplant" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_margin="8dp"
            app:srcCompat="@drawable/mobile" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/textView8"
            android:textColor="@color/DarkSlateGray_10"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_margin="8dp"
            app:srcCompat="@drawable/location" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/textView9"
            android:textColor="@color/DarkSlateGray_10"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="350dp"
        android:layout_marginTop="12dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#707070" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/textView10" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#707070" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmpName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/editTextTextPersonName1"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textView2"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmpEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="Enter Your Email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/textView11"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmpFeedback"
                android:layout_width="346dp"
                android:layout_height="94dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="Feedback"
                android:inputType="textLongMessage"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_background"
                android:text="@string/btnSubmit"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>